--- a/Site Coven/Progression.html
+++ b/Site Coven/Progression.html
@@ -28,6 +28,14 @@
             <li><a class="dropdown-item" href="page1.html">Accueil</a></li>
           </ul>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            notre équipe
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+            <li><a class="dropdown-item" href="Equipe.html">Présentation de l'équipe</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
     <button type="button" class="btn btn-danger" >Play now</button>
@@ -44,21 +52,32 @@
       <img src="image.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Création de la map x%</h5>
-        <p>Jolan : ..............</p>
+        <p>Jolan : Pour que notre personnage évolue dans son aventure, il nous fallait un donjon. C’est pourquoi je me suis chargé de créer les Mapainsi que les environnements de jeu.<br> 
+          J'ai tout d’abord trouvé des textures et des modèles 3D qui correspondaient au style de Coven puis je les ai assemblé pour créer des "map test", puis une "salle extérieur"pour un futur boss à affronter.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="image.png" class="d-block w-100" alt="...">
+      <img src="ProgressIA.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Création de la map x%</h5>
-        <p>Jolan : ..............</p>
+        <h5>IA</h5>
+        <p>Arthur : Le travail sur L'IA de nos enemis basiques est en bonne voie,<br> ses décision lorsqu'elle est seule sont completes et certaines décision de groupe sont implémenté.<br>
+        Elles possèdent aussi pour le moment un sytème de combat basique</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="image.png" class="d-block w-100" alt="...">
+      <img src="Main-menu.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Création de la map x%</h5>
-        <p>Jolan : ..............</p>
+        <h5>Création de l'UI, le menu</h5>
+        <p>Willy : Pour les menus, J'ai utilisé les éléments d’interface utilisateur proposés par Unity.<br>
+          Chaque boutons a une liaison vers un objet géré par "Menu Manager" qui contient un script avec diverses fonctions permettant de manager le menu.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="Multi-UI.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block" style="color:#000000">
+        <b><h5>L'aspect réseau, les rooms</h5>
+        <p>Yanis : Avec l'utilisation de photon j'ai pour notre multi-joueur dû implémenter un système de rooms.<br>
+        Pour le moment nos rooms nous permettent de :<br> — Lister les joueurs de la room <br>— Instancier des objets<br>— Autres actions situationnelles— <br>Synchroniser des joueurs et le status des ennemis</b></p>
       </div>
     </div>
   </div>
