--- a/Site Coven/Trailer_résumé.html
+++ b/Site Coven/Trailer_résumé.html
@@ -45,7 +45,7 @@
   <center><video src="1 second black screen video.mp4" width=800  height=450 controls poster="image.jpg"></center>
   <div class="card-body">
     <h1 class="card-title">Trailer</h5>
-    <p class="card-text">Coven est un jeu RPG du styledungeon crawler,<br>le but est de se battredans une succession de salle avec des ennemi<br> pour ensuite rencontrer une sallequi contient un boss.<br>Ce jeu mettra vos compétences au défis avec des ennemis redoutable.<br>Ici avant d'être un Héros vous devrez essayer de survivre dans ce donjon.<br>Le jeu sera doté d'un systeme de combat dynamique<br>avec des roulades saut et différents moveset.<br>Nous vous attendons dans Coven !<br><br><br></p>
+    <p class="card-text">Coven est un jeu RPG du styledungeon crawler,<br>le but est de se battre dans une succession de salle avec des ennemis<br> pour ensuite rencontrer une salle qui contient un boss.<br>Ce jeu mettra vos compétences au défi avec des ennemis redoutables.<br>Ici avant d'être un Héros vous devrez essayer de survivre dans ce donjon.<br>Le jeu sera doté d'un systeme de combat dynamique<br>avec des roulades , sauts et différents moveset.<br>Nous vous attendons dans Coven !<br><br><br></p>
   </div>
 </div>
 <div class="card text-center bg-dark text-white" style="width:100%;">
